@@ -7,6 +7,150 @@ t3lib_extMgm::addUserTSConfig('
 	options.saveDocNew.pages_language_overlay = 0
 ');
 
+t3lib_extMgm::addPageTSConfig('
+mod.wizards.newContentElements.wizardItems {
+	common.header = LLL:EXT:cms/layout/locallang_db_new_content_el.xml:common
+	common.elements {
+		text {
+			icon = gfx/c_wiz/regular_text.gif
+			title = LLL:EXT:cms/layout/locallang_db_new_content_el.xml:common_regularText_title
+			description = LLL:EXT:cms/layout/locallang_db_new_content_el.xml:common_regularText_description
+			tt_content_defValues {
+				CType = text
+			}
+		}
+		textpic {
+			icon = gfx/c_wiz/text_image_right.gif
+			title = LLL:EXT:cms/layout/locallang_db_new_content_el.xml:common_textImage_title
+			description = LLL:EXT:cms/layout/locallang_db_new_content_el.xml:common_textImage_description
+			tt_content_defValues {
+				CType = textpic
+				imageorient = 17
+			}
+		}
+		image {
+			icon = gfx/c_wiz/images_only.gif
+			title = LLL:EXT:cms/layout/locallang_db_new_content_el.xml:common_imagesOnly_title
+			description = LLL:EXT:cms/layout/locallang_db_new_content_el.xml:common_imagesOnly_description
+			tt_content_defValues {
+				CType = image
+				imagecols = 2
+			}
+		}
+		bullets {
+			icon = gfx/c_wiz/bullet_list.gif
+			title = LLL:EXT:cms/layout/locallang_db_new_content_el.xml:common_bulletList_title
+			description = LLL:EXT:cms/layout/locallang_db_new_content_el.xml:common_bulletList_description
+			tt_content_defValues {
+				CType = bullets
+			}
+		}
+		table {
+			icon = gfx/c_wiz/table.gif
+			title = LLL:EXT:cms/layout/locallang_db_new_content_el.xml:common_table_title
+			description = LLL:EXT:cms/layout/locallang_db_new_content_el.xml:common_table_description
+			tt_content_defValues {
+				CType = table
+			}
+		}
+		
+	}
+	common.show = text,textpic,image,bullets,table
+	
+	special.header = LLL:EXT:cms/layout/locallang_db_new_content_el.xml:special
+	special.elements {
+		uploads {
+			icon = gfx/c_wiz/filelinks.gif
+			title = LLL:EXT:cms/layout/locallang_db_new_content_el.xml:special_filelinks_title
+			description = LLL:EXT:cms/layout/locallang_db_new_content_el.xml:special_filelinks_description
+			tt_content_defValues {
+				CType = uploads
+			}
+		}
+		multimedia {
+			icon = gfx/c_wiz/multimedia.gif
+			title = LLL:EXT:cms/layout/locallang_db_new_content_el.xml:special_multimedia_title
+			description = LLL:EXT:cms/layout/locallang_db_new_content_el.xml:special_multimedia_description
+			tt_content_defValues {
+				CType = multimedia
+			}
+		}
+		menu {
+			icon = gfx/c_wiz/sitemap2.gif
+			title = LLL:EXT:cms/layout/locallang_db_new_content_el.xml:special_sitemap_title
+			description = LLL:EXT:cms/layout/locallang_db_new_content_el.xml:special_sitemap_description
+			tt_content_defValues {
+				CType = menu
+				menu_type = 2
+			}
+		}
+		html {
+			icon = gfx/c_wiz/html.gif
+			title = LLL:EXT:cms/layout/locallang_db_new_content_el.xml:special_plainHTML_title
+			description = LLL:EXT:cms/layout/locallang_db_new_content_el.xml:special_plainHTML_description
+			tt_content_defValues {
+				CType = html
+			}
+		}
+		
+	}
+	special.show = uploads,multimedia,menu,html
+	
+	forms.header = LLL:EXT:cms/layout/locallang_db_new_content_el.xml:forms
+	forms.elements {
+		mailform {
+			icon = gfx/c_wiz/mailform.gif
+			title = LLL:EXT:cms/layout/locallang_db_new_content_el.xml:forms_mail_title
+			description = LLL:EXT:cms/layout/locallang_db_new_content_el.xml:forms_mail_description
+			tt_content_defValues {
+				CType = mailform
+				bodytext (
+# Example content:
+Name: | *name = input,40 | Enter your name here
+Email: | *email=input,40 |
+Address: | address=textarea,40,5 |
+Contact me: | tv=check | 1
+
+|formtype_mail = submit | Send form!
+|html_enabled=hidden | 1
+|subject=hidden| This is the subject
+				)
+			}
+		}
+		search {
+			icon = gfx/c_wiz/searchform.gif
+			title = LLL:EXT:cms/layout/locallang_db_new_content_el.xml:forms_search_title
+			description = LLL:EXT:cms/layout/locallang_db_new_content_el.xml:forms_search_description
+			tt_content_defValues {
+				CType = search
+			}
+		}
+		login {
+			icon = gfx/c_wiz/login_form.gif
+			title = LLL:EXT:cms/layout/locallang_db_new_content_el.xml:forms_login_title
+			description = LLL:EXT:cms/layout/locallang_db_new_content_el.xml:forms_login_description
+			tt_content_defValues {
+				CType = login
+			}
+		}
+		
+	}
+	forms.show = mailform,search,login
+	
+	plugins.header = LLL:EXT:cms/layout/locallang_db_new_content_el.xml:plugins
+	plugins.elements {
+		general {
+			icon = gfx/c_wiz/user_defined.gif
+			title = LLL:EXT:cms/layout/locallang_db_new_content_el.xml:plugins_general_title
+			description = LLL:EXT:cms/layout/locallang_db_new_content_el.xml:plugins_general_description
+			tt_content_defValues.CType = list
+		}
+	}
+	plugins.show = *
+}
+
+');
+
 $TYPO3_CONF_VARS['SYS']['contentTable'] = 'tt_content';
 $TYPO3_CONF_VARS['FE']['eID_include']['tx_cms_showpic'] = 'EXT:cms/tslib/showpic.php';
 
